# edmcoverlay2

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile  README.md  __init__.py  _edmcoverlay.py  cm_ctors.h  colors_mgr.h  drawables.h  gason.cpp  json_message.cc  layer_out.h  load.py  opaque_ptr.h  overlay.cpp  socket.cc  socket.hh  xoverlayoutput.cpp  xoverlayoutput.h
Wayland/: edmcoverlay.py  main.py  messages.py  overlay.css  overlay.py  renderer.py  socket_listener.py  window.py
X11/: _edmcoverlay.py  edmcoverlay.py  gason.h  json_message.cc  json_message.hh  overlay  overlay.cpp  socket.hh
